--- a/index.Rmd
+++ b/index.Rmd
@@ -17,3 +17,9 @@ Write a summary paragraph that includes information calculated by your summary i
 Render your table and describe pertinent observations found in it
 Describe the purpose of each chart (e.g., "this chart was intended to show the relationship between..."), render each chart, and describe pertinent observations found in each chart
 In order to render this information, you'll need to read in your data in (only) your index.Rmd file, and pass your data to the functions provided in each script. If it isn't clear how to these pieces fit together, reach out to your TA.
+
+```{r}
+data <- read.csv("Data/mental_health_data.csv")
+source("Scripts/third_chart.R")
+render_third_chart(data)
+```
