included observations for summary tables

--- a/index.Rmd
+++ b/index.Rmd
@@ -30,8 +30,13 @@ Out of all health facilities across the United States, **`r list_summary$total`*
 knitr::kable(Data/mental_health_summary_table, format = "markdown")
 ```
 
-Some of the most helpful insights within this US Mental Health Summary Statistics Table:
+Some of the most helpful **insights** within this US Mental Health Summary Statistics Table:
+
 1. The health facilities included within the data isn't limited to the 50 states but also includes Washington D.C. and other US Territories as separate data statistics.
+2. California, which has the highest population among the states, has the highest number of mental health facilities that provides sign language and languages other than English.
+3. In Washington state, there are 327 mental health facilities available. Of these mental health facilities, 239 facilities provided sign language and 286 provided languages other than English to better cater to a more diverse demographic.
+
+***
 
 - Describe the purpose of each chart (e.g., "this chart was intended to show the relationship between..."), render each chart, and describe pertinent observations found in each chart
 - In order to render this information, you'll need to read in your data in (only) your index.Rmd file, and pass your data to the functions provided in each script. If it isn't clear how to these pieces fit together, reach out to your TA.
@@ -42,14 +47,30 @@ source("Scripts/first_chart.R")
 render_first_chart(data)
 ```
 
+Purpose:
+
+Important Observations:
+
+***
+
 ```{r}
 data <- read.csv("Data/mental_health_data.csv")
 source("Scripts/second_chart.R")
 render_second_chart(data)
 ```
 
+Purpose:
+
+Important Observations:
+
+***
+
 ```{r}
 data <- read.csv("Data/mental_health_data.csv")
 source("Scripts/third_chart.R")
 render_third_chart(data)
 ```
+
+Purpose:
+
+Important Observations:
