updated table of ssummary file to include table significance

--- a/index.Rmd
+++ b/index.Rmd
@@ -4,14 +4,15 @@ output: html_document
 ---
 # (Sophia's part, but if she needs help, all of us can pitch in!)
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
-source("Scripts/calculate_Summary_info.R")
-source("Scripts/first_chart.R")
-source("Scripts/second_chart.R")
-source("Scripts/third_chart.R")
-source("Scripts/table_of_summary.R")
+
+
+```{r echo = FALSE, message = FALSE, results = FALSE}
 library(knitr)
+source("./calculate_Summary_info.R")
+source("./first_chart.R")
+source("./second_chart.R")
+source("./third_chart.R")
+source("./table_of_summary.R")
 ```
 
 index.Rmd File rubric:
