--- a/index.Rmd
+++ b/index.Rmd
@@ -41,9 +41,9 @@ Most helpful **insights** within this US Mental Health Summary Statistics Table:
 
 ***
 
-## State and Diagnostics Barchart
+## State and Diagnostics **Barchart**
 
-Mental health diagnostics is extremely important and useful for identifying which mental illness a patient could have. Therefore, a barchart was found to be most appropriate in showing this visualization. Although mental health diagnostics can also be provided in places that are not treatment facilities, it is very convenient if both the diagnosis and treatment can be provided in the same place. So knowing how many facilities provide mental health diagnostics would be very useful for people to know.
+Mental health diagnostics is extremely important and useful for identifying which mental illness a patient could have. Although mental health diagnostics can also be provided in places that are not treatment facilities, it is very convenient if both the diagnosis and treatment can be provided in the same place -- knowing how many facilities in each state provide mental health diagnostics is very useful. Therefore, a **barchart** was found to be most appropriate in showing this visualization. 
 
 ```{r echo = FALSE}
 state_vs_diagnostics_barchart(data)
@@ -51,15 +51,15 @@ state_vs_diagnostics_barchart(data)
 
 Important Observations:
 
-1. The state with the most amount of facilities that provides mental health diagnostics is California, with 788 facilities.
-2. The state with the least amount of facilities that provides mental health diagnostics is North Dakota, with 32 facilities.
-3. Most of the states have below 400 facilities that provides mental health diagnostics.
+1. The state with the most amount of facilities that provides mental health diagnostics is _California_, with **788** facilities.
+2. The state with the least amount of facilities that provides mental health diagnostics is _North Dakota_, with **32** facilities.
+3. Most of the states have **under 400** facilities providing mental illness diagnostics.
 
 ***
 
-## Sign Language Resources Scatterplot
+## Sign Language Resources **Scatterplot**
 
-There are a lot of victims of mental illness that are deaf/hard of hearing. Some of their mental health issues could have also stemmed from the fact that they are deaf/hard of hearing. This scatterplot allows clear representation of the amount of resources for individuals with hearing impairments across different states. So knowing how many institutions provide sign language in every state would be very helpful for people that needs it to communicate.
+There are a lot of victims of mental illness that are also hearing impaired. Some of their mental health issues could have also stemmed from the fact that they are deaf/hard of hearing. This **scatterplot** allows clear representation of the amount of resources for individuals with hearing impairments across different states. So knowing how many institutions provide sign language in every state would be very helpful for people who need it to communicate.
 
 ```{r echo = FALSE}
 summary_data <-
@@ -69,15 +69,15 @@ sign_language_data(summary_data)
 
 Important Observations: 
 
-1. The state that provides the most institutions with sign language is California, with 439 institutions.
-2. The state with the least amount of institutions that provides sign language is Wyoming at only 16 institutions.
-3. Most states have between 20 - 250 institutions that provide sign language.
+1. The state that has the most facilities that utilize sign language is _California_, with **439** institutions.
+2. The state with the least amount of institutions providing sign language is _Wyoming_ at only **16** institutions.
+3. About half of the states have over **100** facilities each that provide sign language.
 
 ***
 
-## US Map of Mental Health Facilities
+## US **Heat Map** of Mental Health Facilities
 
-Knowing how many facilities actually responded to the survey is good to know because it gives a good general sense of which facilities are transparent in the information they give out and shows which facilities are underreporting what services they provide. This heat map of the US shows the number of facilities that offer mental health diagnosis across the different states. This information can be utilized to help give potential patients a sense of trust and aid their decision of which state they would want to go to for treatment based on the services the facilities say they provide.
+Knowing how many facilities actually responded to the survey is good to know because it gives a good general sense of which facilities are transparent in the information they give out and shows which facilities are underreporting what services they provide. This **heat map** of the US shows the number of facilities that offer mental health diagnosis across the different states. This information can be utilized to help give potential patients a sense of trust and aid their decision of which state they would want to go to for treatment based on the services the facilities say they provide.
 
 ```{r echo = FALSE, warning = FALSE, message = FALSE}
 render_third_chart(data)
@@ -85,6 +85,6 @@ render_third_chart(data)
 
 Important Observations:
 
-1. California and New York are the states that gave the most responses, at over 800 responses.
-2. The inner part of the United States seem to have the least amount of responses, while the boundaries of the United States seem to have more responses.
+1. _California_ and _New York_ are the states with facilities that gave the most responses, at **over 800** responses to the survey.
+2. The inner part of the United States had fewer responses than states on the borders of the United States.
 3. North Dakota had the least number of mental health facilities that responded with only 34.
