--- a/index.Rmd
+++ b/index.Rmd
@@ -5,11 +5,11 @@ output: html_document
 
 ```{r echo = FALSE, message = FALSE, results = FALSE}
 library(knitr)
-source("Scripts/calculate_summary_info.R")
-source("Scripts/first_chart.R")
-source("Scripts/second_chart.R")
-source("Scripts/third_chart.R")
-source("Scripts/table_of_summary.R")
+source("scripts/calculate_summary_info.R")
+source("scripts/first_chart.R")
+source("scripts/second_chart.R")
+source("scripts/third_chart.R")
+source("scripts/table_of_summary.R")
 data <- read.csv("Data/mental_health_data.csv", stringsAsFactors = F)
 ```
 
